<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/mainRootLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            style="@style/Widget.Material3.AppBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="@dimen/elevation_none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:liftOnScroll="true"
            app:liftOnScrollTargetViewId="@id/scroll_container">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/app_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_scrollFlags="noScroll"
                app:menu="@menu/menu_main"
                app:title="@string/app_name"
                app:titleCentered="true"
                app:titleTextAppearance="@style/TextAppearance.iboalali.Title.Collapsed.Noto" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_margin">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/status_container"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    app:cardCornerRadius="@dimen/default_corner_radius"
                    app:cardElevation="@dimen/elevation_minimum"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_max="@dimen/max_width">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingHorizontal="@dimen/default_padding_double"
                        android:paddingVertical="@dimen/default_padding_double">

                        <FrameLayout
                            android:layout_width="@dimen/progress_container_size"
                            android:layout_height="@dimen/progress_container_size"
                            android:layout_gravity="center_horizontal">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:id="@+id/image_view_status"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:contentDescription="@string/string_root_status_description"
                                android:src="@drawable/ic_unknown_c" />

                            <com.google.android.material.progressindicator.CircularProgressIndicator
                                android:id="@+id/progressbar_loading"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:indeterminate="true"
                                android:visibility="invisible"
                                app:indicatorSize="@dimen/progress_size"
                                app:trackCornerRadius="4dp"
                                app:trackThickness="6dp" />
                        </FrameLayout>

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/text_view_root_status"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:layout_marginTop="@dimen/root_status_text_margin_top"
                            android:layout_marginEnd="24dp"
                            android:gravity="center_horizontal"
                            android:text="@string/textView_checkForRoot"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/status_container" />
                    </androidx.appcompat.widget.LinearLayoutCompat>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/text_view_device_info_panel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    app:cardCornerRadius="@dimen/default_corner_radius"
                    app:cardElevation="@dimen/elevation_minimum"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/status_container"
                    app:layout_constraintWidth_max="@dimen/max_width">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingHorizontal="@dimen/default_padding_double"
                        android:paddingVertical="@dimen/default_padding_double">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/text_view_device_info"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginBottom="12dp"
                            android:gravity="center"
                            android:text="@string/string_your_device"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                            android:textSize="18sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/text_view_device_marketing_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:contentDescription="@string/content_description_marketing_name"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/text_view_device_info"
                            tools:text="Pixel 3 XL" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/text_view_device_model_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:contentDescription="@string/content_description_model_name"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/text_view_device_marketing_name"
                            tools:text="Pixel 3 XL" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/text_view_android_version"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:contentDescription="@string/content_description_android_version"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/text_view_device_model_name"
                            tools:text="Android 10" />

                    </androidx.appcompat.widget.LinearLayoutCompat>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    app:cardCornerRadius="@dimen/default_corner_radius"
                    app:cardElevation="@dimen/elevation_minimum"
                    app:contentPaddingBottom="@dimen/default_padding_double"
                    app:contentPaddingLeft="@dimen/default_padding_double"
                    app:contentPaddingRight="@dimen/default_padding_double"
                    app:contentPaddingTop="@dimen/default_padding_double"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_view_device_info_panel"
                    app:layout_constraintWidth_max="@dimen/max_width">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/text_view_not_rooting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:text="@string/textView_Disclaimer"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/text_view_android_version" />

                </com.google.android.material.card.MaterialCardView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_verify_root"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="@dimen/default_margin_one_and_half"
            android:layout_marginRight="@dimen/default_margin_one_and_half"
            android:layout_marginBottom="@dimen/default_margin_one_and_half"
            android:contentDescription="@string/content_description_check_for_root"
            app:fabSize="auto"
            app:layout_behavior="com.google.android.material.floatingactionbutton.FloatingActionButton$Behavior"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.iboalali.Rectangle.Rounded"
            app:srcCompat="@drawable/ic_baseline_tag_24" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>